--- a/skins/monobook/main.css
+++ b/skins/monobook/main.css
@@ -62,7 +62,6 @@ div#globalWrapper {
 
 table {
 	font-size: 100%;
-	color: black;
 }
 a {
 	text-decoration: none;
