--- a/skins/vector/screen.css
+++ b/skins/vector/screen.css
@@ -825,7 +825,6 @@ dd {
 /* Tables */
 table {
 	font-size: 100%;
-	color: black;
 }
 /* Forms */
 fieldset {
